# Simple-HTN-Planner

./: .gitignore  CMakeLists.txt
Test/: CMakeLists.txt
Test/Source/: main.cpp
